[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wisetree"
version = "0.0.1"
authors = [
  { name="Luis Alberto", email="albertogtelesforo@gmail.com" },
  { name="Sebastian", email="garecorgamer13007@gmail.com" }
]
description = "A decision tree implementation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/luis-telesforo/wise-tree"
"Bug Tracker" = "https://github.com/luis-telesforo/wise-tree/issues"
